tests/baselines/reference/internalAliasUninitializedModuleInsideLocalModuleWithoutExportAccessError.errors.txt
internalAliasUninitializedModuleInsideLocalModuleWithoutExportAccessError.ts(16,17): error TS2694: Namespace '"internalAliasUninitializedModuleInsideLocalModuleWithoutExportAccessError".c' has no exported member 'b'.


==== internalAliasUninitializedModuleInsideLocalModuleWithoutExportAccessError.ts (1 errors) ====
    export namespace a {
        export namespace b {
            export interface I {
                foo();
            }
        }
    }
    
    export namespace c {
        import b = a.b;
        export declare var x: b.I;
        x.foo();
    }
    
    
    export var z: c.b.I;
                    ~
!!! error TS2694: Namespace '"internalAliasUninitializedModuleInsideLocalModuleWithoutExportAccessError".c' has no exported member 'b'.